package hellgren.two_variable_math_optimization;

import java.util.ArrayList;
import java.util.List;

public interface TwoVariableOptimizerInterface {


    DesignVariable findOptimal();

}
