@startuml
class hellgren.two_variable_math_optimization.constraint_processor.ConstraintSumProcessor {
+ void process(ConstraintAbstract)
}
abstract class hellgren.two_variable_math_optimization.constraints.ConstraintAbstract {
+ {abstract}boolean check(DesignVariable)
}
class hellgren.two_variable_math_optimization.constraints.ConstraintBound {
~ double x1Max
~ double x2Max
+ boolean check(DesignVariable)
}
interface hellgren.two_variable_math_optimization.mediator_facade.MediatorMemberInterface {
~ void setMediator(OptimizationMediatorInterface)
}
interface hellgren.two_variable_math_optimization.mediator_facade.OptimizationMediatorInterface {
~ void run()
~ void setDesignVariable(DesignVariable)
~ DesignVariable getDesignVariable()
~ void addConstraint(ConstraintAbstract)
~ void addConstraintCheckResults(boolean)
~ List<Boolean> getConstraintCheckResults()
~ void setCostResult(double)
~ double getCostResult()
~ boolean areConstraintsFeasible()
}
class hellgren.two_variable_math_optimization.mediator_facade.MediatorMemberAbstract {
# OptimizationMediatorInterface mediator
+ void setMediator(OptimizationMediatorInterface)
}
class hellgren.two_variable_math_optimization.constraint_processor.ChainOfConstraintTypes {
~ ConstraintProcessorAbstract chain
+ void setMediatorInChain(OptimizationMediatorInterface)
+ void process(ConstraintAbstract)
}
class hellgren.two_variable_math_optimization.constraints.ConstraintSum {
~ double sumMax
+ boolean check(DesignVariable)
}
class hellgren.two_variable_math_optimization.mediator_facade.OptimizationMediator {
~ DesignVariable designVariable
~ CostFunction costFunction
~ List<ConstraintAbstract> constraints
~ List<Boolean> constraintCheckResults
~ double costResult
~ ChainOfConstraintTypes chain
+ void run()
+ void setDesignVariable(DesignVariable)
+ DesignVariable getDesignVariable()
+ void addConstraint(ConstraintAbstract)
+ void addConstraintCheckResults(boolean)
+ List<Boolean> getConstraintCheckResults()
+ void setCostResult(double)
+ double getCostResult()
+ boolean areConstraintsFeasible()
}
abstract class hellgren.two_variable_math_optimization.constraint_processor.ConstraintProcessorAbstract {
+ void process(ConstraintAbstract)
# void evaluate(ConstraintAbstract)
+ ConstraintProcessorAbstract getNextProcessor()
}
class hellgren.two_variable_math_optimization.tests.TestConstraintProcessor {
+ void test1and2SmEq2and2()
+ void test1and2SmEq2and2AndSumOk()
+ void test1and2SmEq2and2AndSumNotOk()
}
class hellgren.two_variable_math_optimization.cost_designvariable.CostFunction {
~ double kx1
~ double kx2
~ double c
+ {static} CostFunction newEmptyCostFunction()
+ double calculate()
}
class hellgren.two_variable_math_optimization.constraint_processor.ConstraintBoundProcessor {
+ void process(ConstraintAbstract)
}
interface hellgren.two_variable_math_optimization.mediator_facade.TwoVariableOptimizerInterface {
~ DesignVariable findOptimal()
}
class hellgren.two_variable_math_optimization.mediator_facade.TwoVariableOptimizer {
+ {static} int NOF_ITERATIONS
~ CostFunction costFunction
~ List<ConstraintAbstract> constraints
~ Random r
+ DesignVariable findOptimal()
}
class hellgren.two_variable_math_optimization.cost_designvariable.DesignVariable {
~ double x1
~ double x2
+ void copy(DesignVariable)
}
class hellgren.two_variable_math_optimization.tests.TestOptimizationProblem {
~ List<ConstraintAbstract> constraintsEmpty
+ void test1and2GivesCostOf3()
+ void test0and0GivesCostOfC()
+ void testFindBestDesignVariableShallBeCloseTo2a2()
}


hellgren.two_variable_math_optimization.constraint_processor.ConstraintProcessorAbstract <|-- hellgren.two_variable_math_optimization.constraint_processor.ConstraintSumProcessor
hellgren.two_variable_math_optimization.constraints.ConstraintAbstract <|-- hellgren.two_variable_math_optimization.constraints.ConstraintBound
hellgren.two_variable_math_optimization.mediator_facade.MediatorMemberInterface <|.. hellgren.two_variable_math_optimization.mediator_facade.MediatorMemberAbstract
hellgren.two_variable_math_optimization.constraints.ConstraintAbstract <|-- hellgren.two_variable_math_optimization.constraints.ConstraintSum
hellgren.two_variable_math_optimization.mediator_facade.OptimizationMediatorInterface <|.. hellgren.two_variable_math_optimization.mediator_facade.OptimizationMediator
hellgren.two_variable_math_optimization.mediator_facade.MediatorMemberAbstract <|-- hellgren.two_variable_math_optimization.constraint_processor.ConstraintProcessorAbstract
hellgren.two_variable_math_optimization.mediator_facade.MediatorMemberAbstract <|-- hellgren.two_variable_math_optimization.cost_designvariable.CostFunction
hellgren.two_variable_math_optimization.constraint_processor.ConstraintProcessorAbstract <|-- hellgren.two_variable_math_optimization.constraint_processor.ConstraintBoundProcessor
hellgren.two_variable_math_optimization.mediator_facade.TwoVariableOptimizerInterface <|.. hellgren.two_variable_math_optimization.mediator_facade.TwoVariableOptimizer
@enduml